--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,15 @@
   background: #166197;
 }
 
+.bg-white {
+  color: #317bb1;
+  font-weight: bold;
+}
+
+.bg-white:hover {
+  color: #57afed;
+}
+
 .bg-light-blue {
   background: #317bb1;
 }
@@ -85,28 +94,13 @@
 
 .login-field {
   width: 560px;
-  height: 444px;
   background: #317bb1;
   box-shadow: 0px 6px 10px 10px rgba(0, 0, 0, 0.22);
-  border-radius: 20px;
-}
-
-.submit {
-  font-weight: 800;
-  font-size: 32px;
-  line-height: 48px;
-  color: #317bb1;
-  margin-top: 40px;
-  width: 460px;
-  height: 71px;
-  background: #f0f0f0;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;
+  border-radius: 5px;
 }
 
 label {
   font-weight: 800;
-  font-size: 20px;
   line-height: 30px;
   color: #ffffff;
   background: #317bb1;
@@ -117,9 +111,6 @@ input {
 }
 ::placeholder {
   font-weight: 800;
-  font-size: 20px;
-  line-height: 30px;
-
   color: #9b9b9b;
 }
 form {
